Int 867 add functions to interop queue for checking queue depth status (#39)
* Add getStatus to QueueService

* Add index to read_instant on queue tables

* Add preconditions to Liquibase change log

* Update indexes and add SchemaTest

* Fix DBQueueServiceTest

* Add codecov

* Uses two DB queries in MessageDAO.getStatus instead of 4.
Mocks the system clock to more accurately test queue age.

* Update getStatus to generate one map for each query, then split it when results are returned